// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`listFunctionsFiles > Can list all function files from multiple source directories with listFunctionsFiles() > bundler_default 1`] = `
[
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
]
`;

exports[`listFunctionsFiles > Can list all function files from multiple source directories with listFunctionsFiles() > bundler_default_nft 1`] = `
[
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
]
`;

exports[`listFunctionsFiles > Can list all function files from multiple source directories with listFunctionsFiles() > bundler_esbuild 1`] = `
[
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
  },
]
`;

exports[`listFunctionsFiles > Can list all function files from multiple source directories with listFunctionsFiles() > bundler_esbuild_zisi 1`] = `
[
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
  },
]
`;

exports[`listFunctionsFiles > Can list all function files from multiple source directories with listFunctionsFiles() > bundler_nft 1`] = `
[
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/node_modules/test/package.json",
  },
]
`;

exports[`listFunctionsFiles > Can list all function files from multiple source directories with listFunctionsFiles() > bundler_none 1`] = `
[
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/.netlify/internal-functions/function_internal.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function.js",
    "name": "function",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
    "name": "function_user",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/netlify/functions/function_user.js",
  },
]
`;

exports[`listFunctionsFiles > Can list all function files with listFunctionsFiles() > bundler_default 1`] = `
[
  {
    "extension": ".zip",
    "mainFile": "<BASE DIRECTORY>/test.zip",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.zip",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/test.js",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.js",
  },
  {
    "extension": ".ts",
    "mainFile": "<BASE DIRECTORY>/five/index.ts",
    "name": "five",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/five/index.ts",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/four.js/four.js.js",
    "name": "four",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/four.js/four.js.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/one/index.js",
    "name": "one",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/one/index.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/two/two.js",
    "name": "two",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/two/three.json",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/two/two.js",
    "name": "two",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/two/two.js",
  },
  {
    "extension": "",
    "mainFile": "<BASE DIRECTORY>/test",
    "name": "test",
    "runtime": "go",
    "srcFile": "<BASE DIRECTORY>/test",
  },
]
`;

exports[`listFunctionsFiles > Can list all function files with listFunctionsFiles() > bundler_default_nft 1`] = `
[
  {
    "extension": ".zip",
    "mainFile": "<BASE DIRECTORY>/test.zip",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.zip",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/test.js",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.js",
  },
  {
    "extension": ".ts",
    "mainFile": "<BASE DIRECTORY>/five/index.ts",
    "name": "five",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/five/index.ts",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/four.js/four.js.js",
    "name": "four",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/four.js/four.js.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/one/index.js",
    "name": "one",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/one/index.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/two/two.js",
    "name": "two",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/two/two.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/two/two.js",
    "name": "two",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/two/three.json",
  },
  {
    "extension": "",
    "mainFile": "<BASE DIRECTORY>/test",
    "name": "test",
    "runtime": "go",
    "srcFile": "<BASE DIRECTORY>/test",
  },
]
`;

exports[`listFunctionsFiles > Can list all function files with listFunctionsFiles() > bundler_esbuild 1`] = `
[
  {
    "extension": ".zip",
    "mainFile": "<BASE DIRECTORY>/test.zip",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.zip",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/test.js",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.js",
  },
  {
    "extension": ".ts",
    "mainFile": "<BASE DIRECTORY>/five/index.ts",
    "name": "five",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/five/index.ts",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/four.js/four.js.js",
    "name": "four",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/four.js/four.js.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/one/index.js",
    "name": "one",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/one/index.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/two/two.js",
    "name": "two",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/two/two.js",
  },
  {
    "extension": "",
    "mainFile": "<BASE DIRECTORY>/test",
    "name": "test",
    "runtime": "go",
    "srcFile": "<BASE DIRECTORY>/test",
  },
]
`;

exports[`listFunctionsFiles > Can list all function files with listFunctionsFiles() > bundler_esbuild_zisi 1`] = `
[
  {
    "extension": ".zip",
    "mainFile": "<BASE DIRECTORY>/test.zip",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.zip",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/test.js",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.js",
  },
  {
    "extension": ".ts",
    "mainFile": "<BASE DIRECTORY>/five/index.ts",
    "name": "five",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/five/index.ts",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/four.js/four.js.js",
    "name": "four",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/four.js/four.js.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/one/index.js",
    "name": "one",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/one/index.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/two/two.js",
    "name": "two",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/two/two.js",
  },
  {
    "extension": "",
    "mainFile": "<BASE DIRECTORY>/test",
    "name": "test",
    "runtime": "go",
    "srcFile": "<BASE DIRECTORY>/test",
  },
]
`;

exports[`listFunctionsFiles > Can list all function files with listFunctionsFiles() > bundler_nft 1`] = `
[
  {
    "extension": ".zip",
    "mainFile": "<BASE DIRECTORY>/test.zip",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.zip",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/test.js",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.js",
  },
  {
    "extension": ".ts",
    "mainFile": "<BASE DIRECTORY>/five/index.ts",
    "name": "five",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/five/index.ts",
  },
  {
    "extension": ".ts",
    "mainFile": "<BASE DIRECTORY>/five/index.ts",
    "name": "five",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/five/util.ts",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/four.js/four.js.js",
    "name": "four",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/four.js/four.js.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/one/index.js",
    "name": "one",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/one/index.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/two/two.js",
    "name": "two",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/two/two.js",
  },
  {
    "extension": ".json",
    "mainFile": "<BASE DIRECTORY>/two/two.js",
    "name": "two",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/two/three.json",
  },
  {
    "extension": "",
    "mainFile": "<BASE DIRECTORY>/test",
    "name": "test",
    "runtime": "go",
    "srcFile": "<BASE DIRECTORY>/test",
  },
]
`;

exports[`listFunctionsFiles > Can list all function files with listFunctionsFiles() > bundler_none 1`] = `
[
  {
    "extension": ".zip",
    "mainFile": "<BASE DIRECTORY>/test.zip",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.zip",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/test.js",
    "name": "test",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/test.js",
  },
  {
    "extension": ".ts",
    "mainFile": "<BASE DIRECTORY>/five/index.ts",
    "name": "five",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/five/index.ts",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/four.js/four.js.js",
    "name": "four",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/four.js/four.js.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/one/index.js",
    "name": "one",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/one/index.js",
  },
  {
    "extension": ".js",
    "mainFile": "<BASE DIRECTORY>/two/two.js",
    "name": "two",
    "runtime": "js",
    "srcFile": "<BASE DIRECTORY>/two/two.js",
  },
  {
    "extension": "",
    "mainFile": "<BASE DIRECTORY>/test",
    "name": "test",
    "runtime": "go",
    "srcFile": "<BASE DIRECTORY>/test",
  },
]
`;
